[gd_scene load_steps=6 format=3 uid="uid://f1nyjqn31l4f"]

[ext_resource type="PackedScene" uid="uid://bh57fk6qv61ks" path="res://Common/projectile.tscn" id="1_pu1ja"]
[ext_resource type="Script" path="res://Characters/Player Scenes/abilities/bomb/BombProjectile.gd" id="2_v6qmo"]
[ext_resource type="Texture2D" uid="uid://c8qf8mlqmbsp1" path="res://Art/Abilities and Attacks/Bomb Dropshadow.png" id="3_ocghd"]
[ext_resource type="Texture2D" uid="uid://cvkodwdhtawft" path="res://Art/Abilities and Attacks/bomb.png" id="4_kf7k8"]

[sub_resource type="Curve" id="Curve_fh1da"]
min_value = 2.13163e-14
_data = [Vector2(0, 0.0311108), 0.0, 8.33744, 0, 0, Vector2(0.199539, 0.725438), -0.0256024, -0.0256024, 0, 0, Vector2(0.490196, 2.13163e-14), -4.31773, -4.31773, 0, 0, Vector2(0.492503, 2.13163e-14), 9.56432, 9.56432, 0, 0, Vector2(0.584775, 0.334433), 0.0, 0.0, 0, 0, Vector2(0.690888, 2.13163e-14), -9.68871, -9.68871, 0, 0, Vector2(0.693195, 2.13163e-14), 4.40261, 4.40261, 0, 0, Vector2(0.748558, 0.129386), 0.0, 0.0, 0, 0, Vector2(0.801615, 2.13163e-14), -5.71022, 0.0, 0, 0]
point_count = 9

[node name="Projectile" instance=ExtResource("1_pu1ja")]
script = ExtResource("2_v6qmo")
bounce_curve = SubResource("Curve_fh1da")
max_height = 40.0
max_collision_height = 15.0
speed = 120.0
max_range = 150.0

[node name="DropShadow" type="Sprite2D" parent="." index="1"]
position = Vector2(0, 3)
texture = ExtResource("3_ocghd")
hframes = 4

[node name="Sprite2D" parent="." index="2"]
texture = ExtResource("4_kf7k8")

[node name="ExplosionTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_timer_timeout"]
